# secure-exec

./: .dockerignore  .gitattributes  .gitignore  BROWSER-CONVERGENCE-ARCHITECTURE.md  BROWSER-CONVERGENCE-HARDENING.md  CLAUDE.md  Cargo.toml  DOCS-GAP-ANALYSIS.md  DOCS-GAPS.md  README.md  REBASE-ONTO-MAIN.md  docs-theme-extraction-plan.md  justfile  node_modules  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.base.json  turbo.json
crates/bridge/: Cargo.toml  bridge-contract.json
crates/bridge/src/: lib.rs  queue_tracker.rs
crates/bridge/tests/: bridge.rs  support.rs
crates/build-support/: Cargo.toml  pyodide_release.rs  v8_bridge_build.rs
crates/build-support/src/: lib.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/execution/: CLAUDE.md  Cargo.toml  build.rs  build_support.rs  pyodide_release.rs
crates/execution/assets/: polyfill-registry.json  v8-bridge.source.js  wasi-preview1-imports.json
crates/execution/benchmarks/: node-import-baseline.md
crates/execution/src/: benchmark.rs  common.rs  host_node.rs  javascript.rs  lib.rs  node_import_cache.rs  python.rs  runtime_support.rs  signal.rs  v8_host.rs  v8_ipc.rs  v8_runtime.rs  wasm.rs
crates/execution/tests/: benchmark.rs  bridge.rs  cjs_esm_interop.rs  javascript_v8.rs  module_resolution.rs  permission_flags.rs  process.rs  pyodide_release.rs  python.rs  python_prewarm.rs  smoke.rs  wasi_path_open_read_not_blocked.rs  wasm.rs
crates/kernel/: CLAUDE.md  Cargo.toml
crates/kernel/src/: command_registry.rs  device_layer.rs  dns.rs  fd_table.rs  kernel.rs  lib.rs  mount_plugin.rs  mount_table.rs  network_policy.rs  overlay_fs.rs  permissions.rs  pipe_manager.rs  poll.rs  process_table.rs  pty.rs  resource_accounting.rs  root_fs.rs  socket_table.rs  user.rs  vfs.rs
crates/kernel/tests/: agentos_read_only.rs  api_surface.rs  bridge.rs  bridge_support.rs  command_registry.rs  default_deny_guards.rs  device_layer.rs  dns_resolution.rs  fd_table.rs  identity.rs  kernel_integration.rs  loopback_routing.rs  mount_plugin.rs  mount_table.rs  permissions.rs  pipe_manager.rs  poll.rs  process_table.rs  pty.rs  resource_accounting.rs  root_fs.rs  smoke.rs  socket_permissions.rs  socket_table.rs  stdio_devices.rs  tcp_data_plane.rs  tcp_listener.rs  udp_datagram.rs  unix_domain_socket.rs  user.rs  vfs.rs  virtual_process.rs
crates/native-baseline/: Cargo.toml  README.md
crates/native-baseline/src/: main.rs
crates/secure-exec-client/: CLAUDE.md  Cargo.toml
crates/secure-exec-client/src/: error.rs  lib.rs  transport.rs  wire.rs
crates/secure-exec-client/tests/: wire_protocol.rs
crates/secure-exec-vfs/: CLAUDE.md  Cargo.toml
crates/secure-exec-vfs/src/: callback_store.rs  lib.rs
crates/secure-exec-vfs/tests/: local.rs  s3.rs
crates/sidecar/: CLAUDE.md  Cargo.toml  build.rs
crates/sidecar-browser/: CLAUDE.md  Cargo.toml
crates/sidecar-browser/src/: lib.rs  service.rs  wasm.rs  wire_dispatch.rs
crates/sidecar-browser/tests/: bridge.rs  service.rs  smoke.rs  wire_dispatch.rs
crates/sidecar-core/: Cargo.toml
crates/sidecar-core/src/: bridge_bytes.rs  diagnostics.rs  frames.rs  guest_fs.rs  guest_net.rs  guest_pty.rs  identity.rs  layers.rs  lib.rs  limits.rs  net.rs  permissions.rs  root_fs.rs  router.rs  signals.rs  tools.rs  vm_fetch.rs
crates/sidecar-protocol/: Cargo.toml  build.rs
crates/sidecar-protocol/protocol/: README.md  secure_exec_sidecar_v1.bare
crates/sidecar-protocol/src/: lib.rs  protocol.rs  wire.rs
crates/sidecar/assets/: base-filesystem.json
crates/sidecar/protocol/: README.md  secure_exec_sidecar_v1.bare
crates/sidecar/src/: bootstrap.rs  bridge.rs  crypto_cipher.rs  execution.rs  extension.rs  filesystem.rs  generated_protocol.rs  json_rpc.rs  lib.rs  limits.rs  macos_fs.rs  main.rs  package_projection.rs  protocol.rs  service.rs  state.rs  stdio.rs  tools.rs  vm.rs  wire.rs
crates/sidecar/tests/: acp_integration.rs  acp_session.rs  architecture_guards.rs  bidirectional_frames.rs  bridge.rs  builtin_completeness.rs  builtin_conformance.rs  connection_auth.rs  crash_isolation.rs  extension.rs  fetch_via_undici.rs  filesystem.rs  fs_watch_and_streams.rs  generated_protocol.rs  google_drive.rs  guest_identity.rs  host_dir.rs  kill_cleanup.rs  layer_management.rs  limits.rs  limits_audit.rs  node_modules_host_mount_resolution.rs  node_modules_symlink_resolution.rs  package_projection.rs  permission_flags.rs  posix_compliance.rs  posix_path_repro.rs  process_isolation.rs  promisify_module_load.rs  protocol.rs  python.rs  s3.rs  sandbox_agent.rs  security_audit.rs  security_hardening.rs  service.rs  session_isolation.rs  signal.rs  smoke.rs  socket_state_queries.rs  (+3 more)
crates/v8-runtime/: CLAUDE.md  Cargo.toml  build.rs  build_support.rs
crates/v8-runtime/npm/: .gitignore
crates/v8-runtime/src/: bridge.rs  embedded_runtime.rs  execution.rs  host_call.rs  ipc.rs  ipc_binary.rs  isolate.rs  lib.rs  runtime_protocol.rs  session.rs  snapshot.rs  stream.rs  timeout.rs
crates/v8-runtime/tests/: embedded_runtime_session.rs  event_loop.rs  snapshot.rs
crates/vfs/: CLAUDE.md  Cargo.toml
crates/vfs-core/: Cargo.toml
crates/vfs-core/src/: lib.rs
crates/vfs/src/: lib.rs
crates/vfs/tests/: conformance.rs  posix_mount_plugin.rs  posix_mount_table.rs  posix_root_fs.rs  posix_single_symlink_fs.rs  posix_tar_fs.rs  posix_vfs.rs
crates/vm-config/: Cargo.toml
crates/vm-config/bindings/: CreateVmConfig.ts  FsPermissionRuleSet.ts  HttpLimitsConfig.ts  NativeRootFilesystemConfig.ts  PatternPermissionRule.ts  PatternPermissionRuleSet.ts  PatternPermissionScope.ts  PermissionsPolicy.ts  ResourceLimitsConfig.ts  RootFilesystemConfig.ts  RootFilesystemEntryEncoding.ts  RootFilesystemLowerDescriptor.ts  RootFilesystemMode.ts  ToolLimitsConfig.ts  VmDnsConfig.ts  VmLimitsConfig.ts
crates/vm-config/src/: lib.rs
experiments/wasm-gui/host/: Cargo.toml
registry/native/: Cargo.toml  Makefile  rust-toolchain.toml
registry/native/c/: Makefile
registry/native/patches/: 0001-wasi-process-spawn.patch  0002-wasi-fd-dup.patch  (+11 more)
(+1191 files in other folders)
