[workspace]
resolver = "2"
members = [
    "crates/bridge",
    "crates/kernel",
    "crates/vfs",
    "crates/secure-exec-vfs",
    "crates/build-support",
    "crates/sidecar-protocol",
    "crates/sidecar-core",
    "crates/execution",
    "crates/secure-exec-client",
    "crates/sidecar",
    "crates/sidecar-browser",
    "crates/vm-config",
    "crates/v8-runtime",
    "crates/native-baseline",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rivet-dev/secure-exec"

[workspace.dependencies]
secure-exec-bridge = { path = "crates/bridge", version = "0.0.1" }
secure-exec-build-support = { path = "crates/build-support", version = "0.0.1" }
secure-exec-kernel = { path = "crates/kernel", version = "0.0.1" }
secure-exec-sidecar-protocol = { path = "crates/sidecar-protocol", version = "0.0.1" }
secure-exec-sidecar-core = { path = "crates/sidecar-core", version = "0.0.1" }
secure-exec-execution = { path = "crates/execution", version = "0.0.1" }
secure-exec-vm-config = { path = "crates/vm-config", version = "0.0.1" }
secure-exec-v8-runtime = { path = "crates/v8-runtime", version = "0.0.1" }
secure-exec-client = { path = "crates/secure-exec-client", version = "0.0.1" }
secure-exec-sidecar = { path = "crates/sidecar", version = "0.0.1" }
secure-exec-vfs = { path = "crates/secure-exec-vfs", version = "0.0.1" }
vfs = { package = "secure-exec-vfs-core", path = "crates/vfs", version = "0.0.1" }
vbare = "0.0.4"
vbare-compiler = { package = "rivet-vbare-compiler", version = "0.0.5" }
