[workspace]
resolver = "2"
members = [
    "crates/sidecar-browser",
    "crates/sidecar-core",
    "crates/sidecar-protocol",
    "crates/sidecar",
    "crates/client",
    "crates/build-support",
    "crates/v8-runtime",
    "crates/vm-config",
    "crates/execution",
    "crates/kernel",
    "crates/bridge",
    "crates/vfs-core",
    "crates/vfs",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rivet-dev/secure-exec"
