[package]
name = "secure-exec-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared bridge contracts between the secure-exec kernel and execution planes"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
