[package]
name = "secure-exec-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "secure-exec-bridge compatibility shim for agentos-bridge"

[lib]
name = "secure_exec_bridge"

[dependencies]
agentos_bridge = { package = "agentos-bridge", path = "../../../agentos/crates/bridge", version = "0.0.1" }
