[package]
name = "secure-exec-build-support"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "secure-exec-build-support compatibility shim for agentos-build-support"

[lib]
name = "secure_exec_build_support"

[dependencies]
agentos_build_support = { package = "agentos-build-support", path = "../../../agentos/crates/build-support", version = "0.0.1" }
