[package]
name = "secure-exec-execution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native execution plane scaffold for secure-exec"
build = "build.rs"
# Large Pyodide runtime assets are staged at build time (copied from the
# in-tree assets directory during workspace builds, or downloaded from the
# release CDN when building the published crate) so the packaged crate stays
# under the registry size limit. See build.rs.
exclude = [
    "assets/pyodide/pyodide.asm.wasm",
    "assets/pyodide/pyodide.asm.js",
    "assets/pyodide/python_stdlib.zip",
    "assets/pyodide/numpy-2.2.5-cp313-cp313-pyodide_2025_0_wasm32.whl",
    "assets/pyodide/pandas-2.3.3-cp313-cp313-pyodide_2025_0_wasm32.whl",
]

[lib]
doctest = false

[dependencies]
secure-exec-bridge = { workspace = true }
secure-exec-v8-runtime = { workspace = true }
base64 = "0.22"
ciborium = "0.2"
getrandom = "0.2"
nix = { version = "0.29", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
wat = "1"
