[package]
name = "secure-exec-execution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "secure-exec-execution compatibility shim for agentos-execution"

[lib]
name = "secure_exec_execution"

[dependencies]
agentos_execution = { package = "agentos-execution", path = "../../../agentos/crates/execution", version = "0.0.1" }
