[package]
name = "secure-exec-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "secure-exec-kernel compatibility shim for agentos-kernel"

[lib]
name = "secure_exec_kernel"

[dependencies]
agentos_kernel = { package = "agentos-kernel", path = "../../../agentos/crates/kernel", version = "0.0.1" }
