[package]
name = "secure-exec-sidecar-browser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Browser-side Secure Exec sidecar scaffold"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
secure-exec-bridge = { path = "../bridge" }
secure-exec-kernel = { path = "../kernel" }
secure-exec-sidecar-core = { path = "../sidecar-core" }
secure-exec-sidecar-protocol = { path = "../sidecar-protocol" }
secure-exec-vm-config = { path = "../vm-config" }
base64 = "0.22"
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
