[package]
name = "secure-exec-sidecar-browser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "secure-exec-sidecar-browser compatibility shim for agentos-native-sidecar-browser"

[lib]
name = "secure_exec_sidecar_browser"

[dependencies]
agentos_native_sidecar_browser = { package = "agentos-native-sidecar-browser", path = "../../../agentos/crates/native-sidecar-browser", version = "0.0.1" }
