[package]
name = "secure-exec-sidecar-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared Secure Exec sidecar logic for native and browser shells"

[dependencies]
secure-exec-bridge = { workspace = true }
secure-exec-kernel = { workspace = true }
secure-exec-sidecar-protocol = { workspace = true }
secure-exec-vm-config = { workspace = true }
base64 = "0.22"
serde_json = "1.0"
vfs = { workspace = true }
