[package]
name = "secure-exec-sidecar-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "secure-exec-sidecar-core compatibility shim for agentos-native-sidecar-core"

[lib]
name = "secure_exec_sidecar_core"

[dependencies]
agentos_native_sidecar_core = { package = "agentos-native-sidecar-core", path = "../../../agentos/crates/native-sidecar-core", version = "0.0.1" }
