[package]
name = "secure-exec-sidecar-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared Secure Exec sidecar wire protocol and frame helpers"

[lib]
name = "secure_exec_sidecar_protocol"

[dependencies]
secure-exec-vm-config = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_bare = "0.5"
serde_json = "1.0"
vbare = { workspace = true }

[build-dependencies]
vbare-compiler = { workspace = true }
