[package]
name = "secure-exec-sidecar-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "secure-exec-sidecar-protocol compatibility shim for agentos-sidecar-protocol"

[lib]
name = "secure_exec_sidecar_protocol"

[dependencies]
agentos_sidecar_protocol = { package = "agentos-sidecar-protocol", path = "../../../agentos/crates/sidecar-protocol", version = "0.0.1" }
