[package]
name = "secure-exec-sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "secure-exec-sidecar compatibility shim for agentos-native-sidecar"

[lib]
name = "secure_exec_sidecar"

[dependencies]
agentos_native_sidecar = { package = "agentos-native-sidecar", path = "../../../agentos/crates/native-sidecar", version = "0.0.1" }
