[package]
name = "secure-exec-v8-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "V8 isolate runtime for secure-exec guest JavaScript execution"

[dependencies]
secure-exec-bridge = { workspace = true }
v8 = "130"
crossbeam-channel = "0.5"
signal-hook = "0.3"
libc = "0.2"
ciborium = "0.2"
serde = "1.0"
# `vendored` builds OpenSSL from source → self-contained binary with no
# system-openssl discovery on any runner (ubuntu/macOS). openssl backs the
# guest crypto runtime (RSA/EC/DH/AES), so it cannot be a TLS-only stack.
openssl = { version = "0.10", features = ["vendored"] }

[[test]]
name = "v8_bridge_build"
path = "../build-support/v8_bridge_build.rs"
