[package]
name = "secure-exec-v8-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "secure-exec-v8-runtime compatibility shim for agentos-v8-runtime"

[lib]
name = "secure_exec_v8_runtime"

[dependencies]
agentos_v8_runtime = { package = "agentos-v8-runtime", path = "../../../agentos/crates/v8-runtime", version = "0.0.1" }
