[package]
name = "secure-exec-vfs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generic async virtual filesystem primitives"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
blake3 = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
