[package]
name = "secure-exec-vfs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generic async virtual filesystem primitives"

# Published as `secure-exec-vfs-core`, but the lib is named `vfs` so the
# workspace-wide `vfs = { package = "secure-exec-vfs-core" }` alias and this
# crate's own `tests/*.rs` (`use vfs::...`) resolve it by that name.
[lib]
name = "vfs"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
blake3 = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Drop-in std::time replacement: re-exports std on native, uses js_sys::Date /
# performance.now() on wasm32 (where std SystemTime/Instant abort).
web-time = "1.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
