[package]
name = "secure-exec-vfs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "secure-exec-vfs compatibility shim for agentos-vfs"

[lib]
name = "secure_exec_vfs"

[dependencies]
agentos_vfs = { package = "agentos-vfs", path = "../../../agentos/crates/vfs-store", version = "0.0.1" }
