[package]
name = "secure-exec-vm-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared Secure Exec VM creation JSON config DTOs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = { version = "10.1", features = ["import-esm", "no-serde-warnings", "serde-compat"] }
