[package]
name = "secure-exec-vm-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "secure-exec-vm-config compatibility shim for agentos-vm-config"

[lib]
name = "secure_exec_vm_config"

[dependencies]
agentos_vm_config = { package = "agentos-vm-config", path = "../../../agentos/crates/vm-config", version = "0.0.1" }
