# reqwest-shim: a wasm32-wasip1 drop-in for `reqwest` 0.12, backed by secure-exec
# `wasi-http` (host_net TCP/TLS). Wired in via `[patch.crates-io] reqwest = { path }`
# ONLY once it compiles against codex-exec's whole subtree — patching it in early
# would break every command's `make wasm` build.
#
# Scope (from codex-client usage, verified): Client/ClientBuilder/RequestBuilder/
# Response/Body/Method/header/StatusCode/IntoUrl/Error/Certificate; methods
# request/get/post, headers/header/json/body/timeout/build/send, status/json/text/
# bytes/bytes_stream. SSE streaming maps to wasi-http SseReader.
[package]
name = "reqwest"
version = "0.12.28"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WASI (wasm32-wasip1) shim for reqwest 0.12 backed by wasi-http"

[lib]
name = "reqwest"
path = "src/lib.rs"

[dependencies]
wasi-http = { package = "secureexec-wasi-http", path = "../../crates/libs/wasi-http" }
http = "1"
bytes = "1"
serde = "1"
serde_json = "1"
serde_urlencoded = "0.7"
futures-core = "0.3"
url = "2"
base64 = "0.22"

# All reqwest 0.12 features declared as no-ops so this [patch] satisfies every
# consumer's feature request (TLS is host-brokered; compression/dns are inert in
# the shim). Without these, cargo refuses the patch (e.g. sentry wants default-tls).
[features]
default = ["default-tls"]
default-tls = []
native-tls = []
native-tls-vendored = []
native-tls-alpn = []
rustls-tls = []
rustls-tls-manual-roots = []
rustls-tls-manual-roots-no-provider = []
rustls-tls-webpki-roots = []
rustls-tls-webpki-roots-no-provider = []
rustls-tls-native-roots = []
rustls-tls-native-roots-no-provider = []
rustls-tls-no-provider = []
blocking = []
charset = []
cookies = []
gzip = []
brotli = []
zstd = []
deflate = []
json = []
multipart = []
stream = []
socks = []
hickory-dns = []
trust-dns = []
http2 = []
http3 = []
macos-system-configuration = []
