[package]
name = "cmd-cat"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "cat standalone binary for secure-exec VM"

[[bin]]
name = "cat"
path = "src/main.rs"

[dependencies]
uu_cat = "0.7.0"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dev-dependencies]
uucore = { version = "0.7.0", features = ["pipes"] }
