[package]
name = "cmd-codex-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "codex-exec command binary for secure-exec VM"

[[bin]]
name = "codex-exec"
path = "src/main.rs"

[dependencies]
wasi-http = { package = "secureexec-wasi-http", path = "../../libs/wasi-http" }

# WASI stub crates for future codex-core dependencies that don't support wasm32-wasip1.
codex-network-proxy = "0.0.0"
codex-otel = "0.0.0"
