[package]
name = "cmd-codex"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "codex standalone binary for secure-exec VM"

[[bin]]
name = "codex"
path = "src/main.rs"

# The full codex-exec dependency from rivet-dev/codex (wasi-support branch)
# will be wired in when the vendoring blocker is resolved.
#
# The fork at github.com/rivet-dev/codex already has cfg(target_os = "wasi")
# gates on codex-core (portable-pty, network-proxy, sandbox deps) and
# codex-exec (all platform deps gated behind non-WASI).
#
# wasi-spawn provides the WasiChild abstraction that will replace
# tokio::process::Command in codex-core when compiled for WASI.

[dependencies]
wasi-spawn = { package = "secureexec-wasi-spawn", path = "../../libs/wasi-spawn" }
wasi-http = { package = "secureexec-wasi-http", path = "../../libs/wasi-http" }

# TUI dependencies — ratatui for rendering, crossterm for terminal backend
# crossterm is patched for WASI support (see patches/crates/crossterm/)
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }

# WASI stub crates for codex-core dependencies that don't support wasm32-wasip1.
# These provide zero-size/no-op implementations so codex-core compiles for WASI.
codex-network-proxy = "0.0.0"
codex-otel = "0.0.0"
