[package]
name = "cmd-curl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Minimal curl-compatible HTTP client for secure-exec"

[[bin]]
name = "curl"
path = "src/main.rs"

[dependencies]
wasi-http = { package = "secureexec-wasi-http", path = "../../libs/wasi-http" }
