[package]
name = "cmd-http-test"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP client test binary for validating wasi-http through host_net"

[features]
default = ["bin"]
bin = []

[[bin]]
name = "http-test"
path = "src/main.rs"
test = false
required-features = ["bin"]

[dependencies]
wasi-http = { package = "secureexec-wasi-http", path = "../../libs/wasi-http" }
