[package]
name = "cmd-sh"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "sh standalone binary for secure-exec VM"

[[bin]]
name = "sh"
path = "src/main.rs"

[dependencies]
brush-shell = { version = "0.3.0", default-features = false, features = ["reedline", "minimal"] }
