[package]
name = "cmd-sh"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "sh standalone binary for secure-exec VM"

[[bin]]
name = "sh"
path = "src/main.rs"

# `reedline` (brush's interactive line editor) pulls brush-interactive's
# tokio block_in_place / Handle::block_on paths, which don't compile or run on
# single-threaded wasm. The wasm sandbox shell runs scripts, not an interactive
# TTY REPL, so enable reedline only on native targets and keep `minimal` on wasm
# (the pre-#137 behavior that built cleanly for wasm32-wasip1).
[target.'cfg(any(unix, windows))'.dependencies]
brush-shell = { version = "0.3.0", default-features = false, features = ["reedline", "minimal"] }

[target.'cfg(not(any(unix, windows)))'.dependencies]
brush-shell = { version = "0.3.0", default-features = false, features = ["minimal"] }
