[package]
name = "secureexec-jq"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "jq implementation for secure-exec standalone binaries"

[dependencies]
jaq-core = "2.2"
jaq-std = "2.1"
jaq-json = { version = "1.1", features = ["serde_json"] }
serde_json = "1"
